<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/ic_home"
            />
        <item android:id="@+id/nav_add"
            android:title="@string/nav_add"
            android:icon="@drawable/ic_add_black"
            />
        <item android:id="@+id/nav_manager"
            android:title="@string/nav_manager"
            android:icon="@drawable/ic_manager"
            />
        <item android:id="@+id/nav_chart"
            android:title="@string/nav_chart"
            android:icon="@drawable/ic_chart"
            />
        <item android:id="@+id/nav_my_profile"
            android:title="@string/nav_my_profile"
            android:icon="@drawable/ic_person"
            />
        <item android:id="@+id/nav_changer_password"
            android:title="@string/nav_changer_password"
            android:icon="@drawable/ic_lock"
            />
        <item android:id="@+id/nav_logout"
            android:title="@string/nav_logout"
            android:icon="@drawable/ic_logout"
            />
    </group>
</menu>